--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
 </head>
 
 <body>
-  <!-- Content here -->
+  <main class="card">
+    <img src="./public/assets/images/jpg/image-equilibrium.jpg" alt="equilibrium_image" class="card-image">
+    <div class="card-body">
+      <h1 class="card-title">Equilibrium #3429</h1>
+      <p class="card-text">Our Equilibrium collection promotes balance and calm.</p>
+      <div class="card-offering">
+        <div class="pricing">
+          <img src="./public/assets/images/svg/icon-ethereum.svg" alt="ethereum_icon">
+          <p>0.041 ETH</p>
+        </div>
+        <div class="days-left">
+          <img src="./public/assets/images/svg/icon-clock.svg" alt="ethereum_icon">
+          <p>3 days left</p>
+        </div>
+      </div>
+      <hr />
+      <div class="card-creator">
+        <img src="./public/assets/images/jpg/image-avatar.png" alt="creator_avatar">
+        <p>Creation of Jules Wyvern</p>
+      </div>
+    </div>
+  </main>
 </body>
 
 </html>
