changed alt tag to clock

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <p>0.041 ETH</p>
         </div>
         <div class="days-left">
-          <img src="./public/assets/images/svg/icon-clock.svg" alt="ethereum_icon">
+          <img src="./public/assets/images/svg/icon-clock.svg" alt="clock_icon">
           <p>3 days left</p>
         </div>
       </div>
