--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <img src="./public/assets/images/svg/icon-ethereum.svg" alt="ethereum_icon">
           <p>0.041 ETH</p>
         </div>
-        <div class="days-left">
+        <div class="countdown">
           <img src="./public/assets/images/svg/icon-clock.svg" alt="clock_icon">
           <p>3 days left</p>
         </div>
