Added class to avatar

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <hr />
       <div class="card-creator">
-        <img src="./public/assets/images/jpg/image-avatar.png" alt="creator_avatar">
+        <img src="./public/assets/images/jpg/image-avatar.png" alt="creator_avatar" class="card-avatar">
         <p>Creation of Jules Wyvern</p>
       </div>
     </div>
