Added classes to creator image and name

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </div>
       <hr />
       <div class="card-creator">
-        <img src="./public/assets/images/jpg/image-avatar.png" alt="creator_avatar" class="card-avatar">
-        <p>Creation of Jules Wyvern</p>
+        <img src="./public/assets/images/jpg/image-avatar.png" alt="creator_avatar" class="creator-image">
+        <p class="creator-name">Creation of Jules Wyvern</p>
       </div>
     </div>
   </main>
