Added span to creator name

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <hr />
       <div class="card-creator">
         <img src="./public/assets/images/jpg/image-avatar.png" alt="creator_avatar" class="creator-image">
-        <p class="creator-name">Creation of Jules Wyvern</p>
+        <p class="creator-name">Creation of <span>Jules Wyvern</span></p>
       </div>
     </div>
   </main>
