--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
 <body>
   <main class="card">
-    <img src="./public/assets/images/jpg/image-equilibrium.jpg" alt="equilibrium_image" class="card-image">
+    <div class="card-images">
+      <img src="./public/assets/images/jpg/image-equilibrium.jpg" alt="equilibrium_image" class="main-image">
+      <img src="./public/assets/images/svg/icon-view.svg" alt="equilibrium_image" class="overlay-image">
+    </div>
     <div class="card-body">
       <h1 class="card-title">Equilibrium #3429</h1>
       <p class="card-text">Our Equilibrium collection promotes balance and calm.</p>
