Added image hover with transition

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <main class="card">
     <div class="card-images">
       <img src="./public/assets/images/jpg/image-equilibrium.jpg" alt="equilibrium_image" class="main-image">
-      <img src="./public/assets/images/svg/icon-view.svg" alt="equilibrium_image" class="overlay-image">
+      <div class="overlay-image">
+        <img src="./public/assets/images/svg/icon-view.svg" alt="equilibrium_image">
+      </div>
     </div>
     <div class="card-body">
       <h1 class="card-title">Equilibrium #3429</h1>
