--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <p>3 days left</p>
         </div>
       </div>
-      <hr />
+      <div class="border"></div>
       <div class="card-creator">
         <img src="./public/assets/images/jpg/image-avatar.png" alt="creator_avatar" class="creator-image">
         <p class="creator-name">Creation of <span>Jules Wyvern</span></p>
